# mpmetis

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  build.sh  get_metis.sh  install.sh  pyproject.toml  setup.cfg  setup.py
docs/: 01_installation.rst  02_usage.rst  03_reference.rst  conf.py  index.rst
src/ammetis/: __init__.py  mod_part_mesh_nodal.pxd  mod_part_mesh_nodal.pyx
src/mpmetis/: __init__.py  mod_part_mesh_nodal.pxd  mod_part_mesh_nodal.pyx
tests/: test_part_mesh_nodal.py
