[metadata]
name = mpmetis
version = 0.0.1
author = Christian Meyer
url = 'https://github.com/c-meyer/mpmetis'
author_email = 'christian.meyer@tum.de'

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    python_version >= "3.7"
    numpy
    cython

[options.packages.find]
where=src
