[metadata]
name = mpmetis
version = 0.0.1
author = Christian Meyer
url = 'https://github.com/c-meyer/mpmetis'
author_email = 'christian.meyer@tum.de'

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    numpy
    cython
    numpydoc

[options.packages.find]
where=src
